<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp">

    <EditText
        android:id="@+id/edtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingreso_correo"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edtContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingreso_contrasena"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Switch
        android:id="@+id/swtGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/ingreso_guardar" />

    <Button
        android:id="@+id/btnIngresar"
        android:text="@string/ingreso_ingresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnBorrar"
        android:text="@string/ingreso_borrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
